--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -195,3 +195,6 @@ VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCal
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="Grapin",NewName="EXTRA_1")
 
+[/Script/Engine.PhysicsSettings]
+bSubstepping=True
+
