--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -82,24 +82,26 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +ActionMappings=(ActionName="Crounch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
++ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
 +ActionMappings=(ActionName="Switch_Mode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Wake_up",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
++ActionMappings=(ActionName="Crounch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +AxisMappings=(AxisName="Forward_vector",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="Forward_vector",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Right_vector",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Right_vector",Scale=-1.000000,Key=Q)
 +AxisMappings=(AxisName="Axis Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Axis LooKUp",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="Axis Turn Rate",Scale=1.000000,Key=Gamepad_RightX)
-+AxisMappings=(AxisName="Axis LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Forward_vector",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="Right_vector",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="Axis Turn Rate",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="Axis Turn Rate",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Axis LookUpRate",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="Axis LookUpRate",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="Axis LooKUp",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="Axis Turn",Scale=1.000000,Key=Gamepad_RightX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
